# esp32-zigbee-gtw

./: .gitignore
.github/workflows/: build.yml
ncp-usb/: CMakeLists.txt  sdkconfig.defaults
ncp-usb/main/: esp_zigbee_ncp.c  esp_zigbee_ncp.h
ncp/components/esp-zigbee-ncp/: CMakeLists.txt
ncp/components/esp-zigbee-ncp/include/: esp_zb_ncp.h
ncp/components/esp-zigbee-ncp/src/: esp_ncp_bus_usb.c
web-flasher/: index.html
